--- a/public/templates/resultsPage.hbs
+++ b/public/templates/resultsPage.hbs
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../css/resultsPage.css">
         <link rel="stylesheet" href="..//css/jquery-ui-1.13.1.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.13.1/jquery-ui.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.1/jquery-ui.min.js"></script>
         <script src="../js/resultsPage.js"></script>
     </head>
 
